-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
40.529093] LustreError: 8376:0:(llite_lib.c:955:ll_get_default_mdsize()) Get default mdsize error rc -19
[ 40.531005] BUG: kernel NULL pointer dereference, address: 0000000000000158
[ 40.531007] #PF: supervisor read access in kernel mode
[ 40.531007] #PF: error_code(0x0000) - not-present page
[ 40.531009] PGD 1108cd067 P4D 1108cd067 PUD 1108cc067 PMD 0
[ 40.531010] Oops: 0000 [#1] SMP
[ 40.531012] CPU: 3 PID: 8376 Comm: lctl Tainted: G W O ------- --- 5.14.0 #17
[ 40.531013] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.17.0-8.fc42 06/10/2025
[ 40.531013] RIP: 0010:lu_site_stats_seq_print+0x1b/0x2b0 [obdclass]
[ 40.531052] Code: 41 5c c3 66 66 2e 0f 1f 84 00 00 00 00 00 90 41 57 41 56 41 55 41 54 55 48 89 f5 53 48 89 fb 48 81 c7 90 02 00 00 48 83 ec 48 <44> 8b a7 c8 fe ff ff 48 c7 44 24 10 00 00 00 00 48 c7 44 24 18 00
[ 40.531053] RSP: 0018:ffff94ef89e9bcb8 EFLAGS: 00010296
[ 40.531054] RAX: ffff94ef808b8800 RBX: 0000000000000000 RCX: 0000000000000001
[ 40.531055] RDX: 0000000000001000 RSI: ffff94ef40ae8a48 RDI: 0000000000000290
[ 40.531056] RBP: ffff94ef40ae8a48 R08: 0000000000400cc0 R09: 00000000ffffffff
[ 40.531057] R10: ffffffff922ddb37 R11: 0000000000000000 R12: ffff94ef89e9be18
[ 40.531057] R13: ffff94ef89e9bdf0 R14: ffff94ef40ae8a70 R15: 0000000000000001
[ 40.531059] FS: 00007ff84c2cf940(0000) GS:ffff94f015780000(0000) knlGS:0000000000000000
[ 40.531060] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 40.531061] CR2: 0000000000000158 CR3: 0000000149e9c000 CR4: 0000000000350eb0
[ 40.531062] Call Trace:
[ 40.531063] <TASK>
[ 40.531064] ? __die_body.cold+0x1a/0x1f
[ 40.531067] ? page_fault_oops+0x65/0x1d0
[ 40.531069] ? exc_page_fault+0x65/0x240
[ 40.531072] ? asm_exc_page_fault+0x22/0x30
[ 40.531074] ? seq_read_iter+0x377/0x460
[ 40.531076] ? lu_site_stats_seq_print+0x1b/0x2b0 [obdclass]
[ 40.531104] ? lock_acquire+0x15c/0x2f0
[ 40.531106] ? trace_contention_end+0x29/0xc0
[ 40.531108] ? __mutex_lock+0xf2/0x9a0
[ 40.531110] ? __is_insn_slot_addr+0x91/0x130
[ 40.531112] cl_site_stats_print+0x15/0x180 [obdclass]
[ 40.531140] ? __kmalloc_node+0x15d/0x2b0
[ 40.531142] ? seq_read_iter+0x377/0x460
this is lctl get_param racing with mount