LU-20064 llite: fix oops in ll_site_stats_seq_show

ignore procfs access to lu site stats until mount has got all
structures intitialized.

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I24205cba494a7bf4477894141d27f7dcc8b23715
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65004
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>